k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tm-calc-service
spec:
  selector:
    app: tm-calc
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
